--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ details {
   border: 3px solid #0a0a0a;
   background-color: #ffffff;
   cursor: pointer;
+  color: #0a0a0a;
 }
 
 .tab-button:hover {
